--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@react-three/fiber": "^8.17.14",
     "framer-motion": "^12.0.11",
     "lucide-react": "0.473.0",
+    "next": "^15.1.6",
     "node": "22.13.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "three": "^0.173.0"
   },
