--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atlas-music-player",
+  "name": "personal-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,18 +19,23 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "framer-motion": "^12.0.11",
+    "glider-js": "^1.7.9",
     "lucide-react": "0.473.0",
     "next": "^15.1.6",
     "node": "22.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-slick": "^0.30.3",
+    "react-typescript": "^1.0.0",
+    "swiper": "^11.2.2",
     "three": "^0.173.0"
   },
   "devDependencies": {
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
+    "@types/glider-js": "^1.7.11",
     "@types/node": "22.10.5",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
@@ -48,7 +53,7 @@
     "postcss": "8.5.1",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
-    "vite": "6.0.7",
+    "vite": "^6.1.0",
     "vitest": "3.0.4"
   },
   "msw": {
