--- a/package.json
+++ b/package.json
@@ -6,55 +6,57 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "2.1.10",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
-    "framer-motion": "^12.0.11",
+    "@vitejs/plugin-react": "^4.3.4",
+    "framer-motion": "^12.4.2",
     "glider-js": "^1.7.9",
-    "lucide-react": "0.473.0",
-    "next": "^15.1.6",
-    "node": "22.13.0",
+    "lucide-react": "0.475.0",
+    "next": "^15.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
-    "react-typescript": "^1.0.0",
+    "remixicon": "^4.6.0",
     "swiper": "^11.2.2",
-    "three": "^0.173.0"
+    "three": "^0.173.0",
+    "webpack": "^5.97.1",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-dev-server": "^5.2.0",
+    "ws": "^8.18.0",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
-    "@types/glider-js": "^1.7.11",
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "@typescript-eslint/eslint-plugin": "8.19.1",
-    "@typescript-eslint/parser": "8.19.1",
-    "@vitejs/plugin-react": "4.3.4",
-    "@vitest/coverage-v8": "3.0.4",
-    "autoprefixer": "10.4.20",
-    "eslint": "9.18.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "9.20.1",
     "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-react-refresh": "0.4.18",
+    "eslint-plugin-react-refresh": "0.4.19",
     "jest-styled-components": "7.2.0",
     "jsdom": "26.0.0",
     "msw": "2.7.0",
-    "postcss": "8.5.1",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.7.3",
+    "postcss": "^8.5.2",
+    "tailwindcss": "^3.4.1",
     "vite": "^6.1.0",
-    "vitest": "3.0.4"
+    "vitest": "3.0.5"
   },
   "msw": {
     "workerDirectory": [
