--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
     "@fortawesome/react-fontawesome": "0.2.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
-    "@material-tailwind/react": "2.1.10",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "@vitejs/plugin-react": "^4.3.4",
+    "feather-icons": "^4.29.2",
     "framer-motion": "^12.4.2",
     "glider-js": "^1.7.9",
     "lucide-react": "0.475.0",
+    "motion": "^12.4.3",
     "next": "^15.1.7",
+    "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "react-slick": "^0.30.3",
     "remixicon": "^4.6.0",
     "swiper": "^11.2.2",
@@ -54,6 +58,7 @@
     "jsdom": "26.0.0",
     "msw": "2.7.0",
     "postcss": "^8.5.2",
+    "sass-embedded": "^1.83.4",
     "tailwindcss": "^3.4.1",
     "vite": "^6.1.0",
     "vitest": "3.0.5"
